--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
-/* CHECK FONT  https://fonts.google.com/specimen/Roboto?query=roboto*/
-/* Check box shadow */
+/* Add box shadow */
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;    
 }
 
-.body {
+body {
     font-family: 'Roboto', sans-serif;
-    /* set default font-size */
+    font-size: 16px;
     line-height: 1.5;
 }
 
@@ -70,6 +69,7 @@
 }
 
 .hero h1 {
+    font-family: 'Roboto';
     font-size: 48px;
     font-weight: bold;
     color: #f9faf8;
