--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ body {
 
 .header .container {
     max-width: 1200px;
+    min-width: 750px;
     margin: 0 auto;
     display: flex;
-    padding: 40px 150px;
+    padding: 40px 100px;
     justify-content: space-between;
     }
 
@@ -49,13 +50,13 @@ body {
 
 .hero .container {
     max-width: 1200px;
-    min-width: 800px;
+    min-width: 650px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    padding: 20px 150px 100px 150px;
-    justify-content: space-between;
-    align-items: stretch;
+    padding: 20px 100px 100px 100px;
+    justify-content: center;
+    /* align-items: stretch; */
     gap: 40px;
 }
 
@@ -109,9 +110,9 @@ body {
 
 .boxes .container {
     max-width: 1200px;
-    min-width: 800px;
+    min-width: 630px;
     margin: 0 auto;
-    padding: 0 160px;    
+    padding: 0 110px;    
     display: flex;
     flex-direction: column;
 }
@@ -160,26 +161,27 @@ body {
 .quote .container {
     gap: 20px;
     max-width: 1100px;
-    min-width: 800px;
-    padding: 100px 160px;
+    min-width: 630px;
+    padding: 100px 110px;
     margin: 0 auto;    
 }
 
 .quote .qc1 {
     display: flex;
     flex-direction: column;
+    /* min-width: 430px; */
     Gap: 20px;
 }
 
 .quote .inspired {
     color: #1f2937;
-    min-width: 500px;
+/*     min-width: 430px; */
     font-size: 36px;
     font-style: italic;
 }
 
 .quote .Thor {
-    min-width: 500px;
+/*     min-width: 430px; */
     font-size: 24px;
     font-weight: bold;
     text-align: right;
@@ -188,8 +190,8 @@ body {
 
 .action .container {
     max-width: 1200px;
-    min-width: 950px;
-    padding: 0  150px;
+    min-width: 650px;
+    padding: 0  100px;
     margin: 0 auto;;
     display: flex;
     justify-content: space-between;
