--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ Cause TBC
 }
 
 .footer .container {
-    width: 100vw;
+    max-width: 100vw;
     background-color: #1f2937;
     color: #fff;
     font-size: 12px;
